# SupportLens-AI

./: .gitignore  LICENSE  README.md  docker-compose.yml
apps/api/: .coverage  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_persistence.py  0002_retrieval_indexes.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  schema.sql  session.py
apps/api/app/modules/answer/: drafts.py  prompts.py  routes.py  schemas.py  service.py
apps/api/app/modules/auth_policy/: dependencies.py  models.py  schemas.py  service.py
apps/api/app/modules/citation/: service.py
apps/api/app/modules/conversation/: routes.py  schemas.py  service.py
apps/api/app/modules/evaluation/: datasets.py  routes.py  service.py
apps/api/app/modules/evaluation/datasets/: launch_support_questions.json
apps/api/app/modules/llm_gateway/: embeddings.py  litellm_client.py  service.py
apps/api/app/modules/retrieval/: ranking.py  schemas.py  service.py
apps/api/app/modules/source_management/: connectors.py  models.py  queue.py  routes.py  service.py
apps/api/app/modules/telemetry/: routes.py  service.py
apps/api/supportlens_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_connectors_and_queue.py  test_ingestion_workers.py
apps/api/tests/integration/: test_chat_retrieval_answer.py  test_e2e_live_answer.py  test_health_and_auth.py  test_ingestion_ops_evaluation.py  test_persistence_data_layer.py  test_retrieval_postgres.py
apps/api/tests/unit/: test_llm_answer_quality.py
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: HLD.md  LLD.md  PRD.md  TODO.md  challenge-tracker.md
docs/core_components/: llm_integration.md  persistence_and_data_layer.md  retrieval_and_ingestion.md
infra/: litellm.yaml
workers/: Dockerfile
workers/evaluation/: jobs.py  main.py
workers/ingestion/: chunking.py  jobs.py  main.py
workers/scheduler/: sync_scheduler.py
(+18 files in other folders)
