[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supportlens-api"
version = "0.1.0"
description = "FastAPI backend for SupportLens AI"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "email-validator>=2.1",
  "eval-type-backport>=0.2",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "numpy>=1.24",
  "rq>=1.16",
  "redis>=5.0",
]

[project.optional-dependencies]
# Heavy local embedding stack. Kept optional so the base/test install stays light;
# without it the embedding gateway uses a deterministic fallback.
embeddings = [
  "sentence-transformers>=2.6",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "fakeredis>=2.21",
  "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "../.."]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "e2e: full end-to-end integration test against real Postgres, embeddings, and LiteLLM/Ollama (opt-in; auto-skips when unavailable)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
